--- a/src/screens/details/Details.css
+++ b/src/screens/details/Details.css
@@ -14,3 +14,52 @@
     margin-left: 20px;
     align-items: center;
 }
+.flexRow{
+    display:flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: row;
+    
+}
+.flex5{
+    flex: 5;
+}
+
+.flex10{
+    flex: 10;
+}
+.flex2{
+    flex:2;
+}
+.margin10{
+    margin-right: 10px;
+}
+.bold{
+    text-decoration-style:bold;
+}
+.width-40{
+   width:40% 
+}
+.btn-hover:hover{
+    background-color: yellow !important;
+}
+.minus-icon{
+    font-size: 24px;
+    width: 1em;
+    height: 1em;
+    line-height: 1em;
+    font-weight: 700;
+    color: black;
+}
+.plus-btn{
+    font-size: 24px;
+    line-height: 18px;
+    font-weight: 700;
+    color: #757575;
+    cursor: pointer;
+}
+@media only screen and (max-width: 600px) {
+    .mobile-text-center{
+        text-align: center;
+    }
+}
